<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Serenade</string>
    <string name="action_settings">Settings</string>
    <string name="slide_button">Open slide</string>

    <!-- common -->
    <string name="text_ok">OK</string>
    <string name="text_cancel">Cancel</string>

    <!-- Profile -->
    <string name="follow">follows</string>
    <string name="follower">followers</string>

    <!-- Navigation item -->
    <string name="profile_link">Profile</string>
    <string name="list_link">Lists</string>
    <string name="tweet_link">Tweet</string>
    <string name="notification_link">Notifications</string>
    <string name="search_link">Search</string>
    <string name="message_link">Messages</string>
    <string name="support_link">Support</string>
    <string name="sign_out">Sign out</string>

    <!-- Format -->
    <string name="format_tweet_count">%d%dK</string>

    <!-- Tweet -->
    <string name="retweet_user_name">%s retweeted</string>

    <!-- Twitter login -->
    <string name="install_official_client_prompt">Please install official Twitter client too\nSerenade is designed to use with official client</string>
    <string name="official_client_link">https://play.google.com/store/apps/details?id=com.twitter.android</string>

    <!-- Sign out -->
    <string name="sign_out_prompt_message">Are you sure you want to sign out?</string>

    <!-- Toast -->
    <string name="login_success">Login success</string>
    <string name="login_failure">Login failed</string>
    <string name="sign_out_success">Signed out successfully</string>
    <string name="retweet_success">Retweet success</string>
    <string name="retweet_failure">Retweet failed</string>
    <string name="cancel_retweet_success">Cancel retweet success</string>
    <string name="cancel_retweet_failure">Cancel retweet failed</string>
    <string name="favorite_success">Favorite success</string>
    <string name="favorite_failure">Favorite failed</string>
    <string name="cancel_favorite_success">Cancel favorite success</string>
    <string name="cancel_favorite_failure">Cancel favorite failed</string>
    <string name="load_tweet_failure">Failed to load tweet</string>
    <string name="rate_limit_exceeded">Rate limit exceeded (%d times per minute)</string>

    <!-- Terms and service -->
    <string name="terms_and_service_title">Terms and service</string>
    <string name="terms_and_service_text_1">I am not responsible for any damage incurred by using this application.</string>
    <string name="terms_and_service_text_2">The API server used by this application can only be accessed from this application.</string>
    <string name="terms_and_service_text_3">The source code of this application is published under the MIT license at GitHub.</string>
    <string name="terms_and_service_text_4">https://github.com/tynmarket/Serenade</string>

    <!-- Privacy Policy -->
    <string name="privacy_title">Privacy Policy</string>
    <string name="privacy_text">The policies regarding the collection, use, and disclosure of Personal Information is described on the following linked page.</string>
    <string name="privacy_link">https://serenade-197604.firebaseapp.com/privacy-policy-en.html</string>

    <!-- Version -->
    <string name="version">Version</string>
    <string name="version_code">1.0.1-preview</string>
</resources>
