<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/profile_link"
            android:icon="@drawable/profile"
            android:title="@string/profile_link" />
        <item
            android:id="@+id/tweet_link"
            android:icon="@drawable/twitter"
            android:title="@string/tweet_link" />
        <item
            android:id="@+id/notification_link"
            android:icon="@drawable/notification"
            android:title="@string/notification_link" />
        <item
            android:id="@+id/search_link"
            android:icon="@drawable/search"
            android:title="@string/search_link" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/support_link"
                android:icon="@drawable/support"
                android:title="@string/support_link" />
            <item
                android:id="@+id/sign_out"
                android:icon="@drawable/sign_out"
                android:title="@string/sign_out" />
        </menu>
    </item>

</menu>