<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/spacing_5x_large">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_medium"
        android:textStyle="bold"
        android:text="@string/terms_and_service_title" />

    <TextView
        android:id="@+id/text_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_marginTop="@dimen/spacing_5x_large"
        android:text="@string/terms_and_service_text_1" />

    <TextView
        android:id="@+id/text_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_1"
        android:layout_marginTop="@dimen/spacing_5x_large"
        android:text="@string/terms_and_service_text_2" />

    <TextView
        android:id="@+id/text_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_2"
        android:layout_marginTop="@dimen/spacing_5x_large"
        android:autoLink="web"
        android:text="@string/terms_and_service_text_3" />


    <TextView
        android:id="@+id/version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_3"
        android:layout_marginTop="@dimen/spacing_5x_large"
        android:textSize="@dimen/text_size_medium"
        android:textStyle="bold"
        android:text="@string/version" />

    <TextView
        android:id="@+id/version_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/version"
        android:layout_marginTop="@dimen/spacing_5x_large"
        android:text="@string/version_code" />

</RelativeLayout>