<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/ultra_light_gray" />

    <!-- User profile -->
    <com.tynmarket.serenade.view.custom.NavigationProfileView
        android:id="@+id/navigation_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/drawer_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingEnd="@dimen/drawer_horizontal_margin"
        android:background="@color/colorPrimaryDark" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/spacing_l_medium" />

    <!-- TODO: Custom view or custom navigation menu item -->

    <TextView
        android:id="@+id/profile_link"
        android:drawableStart="@drawable/profile"
        android:text="@string/profile_link"
        android:background="?android:selectableItemBackground"
        style="@style/AppTheme.NavigationItem"
        tools:text="プロフィール" />

    <TextView
        android:id="@+id/list_link"
        android:drawableStart="@drawable/list"
        android:text="@string/list_link"
        android:background="?android:selectableItemBackground"
        style="@style/AppTheme.NavigationItem"
        tools:text="リスト" />

    <TextView
        android:id="@+id/tweet_link"
        android:drawableStart="@drawable/twitter"
        android:text="@string/tweet_link"
        android:background="?android:selectableItemBackground"
        style="@style/AppTheme.NavigationItem"
        tools:text="ツイートする" />

    <TextView
        android:id="@+id/search_link"
        android:drawableStart="@drawable/search"
        android:text="@string/search_link"
        android:background="?android:selectableItemBackground"
        style="@style/AppTheme.NavigationItem"
        tools:text="検索" />

    <TextView
        android:id="@+id/notification_link"
        android:drawableStart="@drawable/notification"
        android:text="@string/notification_link"
        android:background="?android:selectableItemBackground"
        style="@style/AppTheme.NavigationItem"
        tools:text="通知" />

    <TextView
        android:id="@+id/message_link"
        android:drawableStart="@drawable/message"
        android:text="@string/message_link"
        android:background="?android:selectableItemBackground"
        style="@style/AppTheme.NavigationItem"
        tools:text="検索" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginStart="@dimen/drawer_horizontal_margin"
        android:layout_marginTop="@dimen/spacing_large"
        android:layout_marginEnd="@dimen/drawer_horizontal_margin"
        android:layout_marginBottom="@dimen/spacing_medium"
        android:background="@color/silver" />

    <TextView
        android:id="@+id/support_link"
        android:drawableStart="@drawable/support"
        android:text="@string/support_link"
        android:background="?android:selectableItemBackground"
        style="@style/AppTheme.NavigationItem"
        tools:text="お問い合わせ" />

    <TextView
        android:id="@+id/sign_out"
        android:drawableStart="@drawable/sign_out"
        android:text="@string/sign_out"
        android:background="?android:selectableItemBackground"
        style="@style/AppTheme.NavigationItem"
        tools:text="ログアウト" />

    <TextView
        android:id="@+id/terms_and_service"
        android:drawableStart="@drawable/terms_and_service"
        android:text="@string/terms_and_service_title"
        android:background="?android:selectableItemBackground"
        style="@style/AppTheme.NavigationItem"
        tools:text="利用規約" />

</LinearLayout>