<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="@dimen/drawer_horizontal_margin"
    android:layout_marginEnd="@dimen/drawer_horizontal_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin">

    <!-- TODO: Adjust margin vertical -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <!-- icon -->
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_icon"
            android:layout_width="@dimen/icon_size_list_item_tweet"
            android:layout_height="@dimen/icon_size_list_item_tweet"
            android:src="@drawable/default_profile"
            tools:src="@drawable/default_profile" />

        <!-- screen name -->
        <TextView
            android:id="@+id/profile_screen_name"
            android:layout_toEndOf="@id/profile_icon"
            android:layout_alignBottom="@id/profile_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_large"
            android:maxLines="1"
            tools:text="\@screen_name" />

    </RelativeLayout>

    <!-- TODO: Two lines -->
    <!-- name -->
    <TextView
        android:id="@+id/profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_large"
        android:maxLines="1"
        android:textSize="@dimen/text_size_medium"
        android:textStyle="bold"
        android:textColor="?android:textColorPrimary"
        tools:text="name" />

    <!-- follow and follower -->
    <TextView
        android:id="@+id/profile_follow_and_follower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_large"
        tools:text="488 フォロー  1,958 フォロワー" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="@dimen/spacing_5x_large"
        android:layout_marginBottom="@dimen/spacing_medium"
        android:background="@color/silver" />

    <!-- profile -->
    <!-- TODO: Ripple effect -->
    <TextView
        android:id="@+id/profile_link"
        android:drawableStart="@drawable/profile"
        android:text="@string/profile_link"
        style="@style/AppTheme.NavigationItem"
        tools:text="プロフィール" />

    <!-- list -->
    <!-- TODO: Ripple effect -->
    <TextView
        android:id="@+id/list_link"
        android:drawableStart="@drawable/list"
        android:text="@string/list_link"
        style="@style/AppTheme.NavigationItem"
        tools:text="リスト" />

    <!-- TODO: Ripple effect -->
    <TextView
        android:id="@+id/tweet_link"
        android:drawableStart="@drawable/twitter"
        android:text="@string/tweet_link"
        style="@style/AppTheme.NavigationItem"
        tools:text="ツイートする" />

    <!-- TODO: Ripple effect -->
    <TextView
        android:id="@+id/notification_link"
        android:drawableStart="@drawable/notification"
        android:text="@string/notification_link"
        style="@style/AppTheme.NavigationItem"
        tools:text="通知" />

    <!-- TODO: Ripple effect -->
    <TextView
        android:id="@+id/search_link"
        android:drawableStart="@drawable/search"
        android:text="@string/search_link"
        style="@style/AppTheme.NavigationItem"
        tools:text="検索" />

    <!-- TODO: Ripple effect -->
    <TextView
        android:id="@+id/message_link"
        android:drawableStart="@drawable/message"
        android:text="@string/message_link"
        style="@style/AppTheme.NavigationItem"
        tools:text="検索" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="@dimen/spacing_large"
        android:layout_marginBottom="@dimen/spacing_medium"
        android:background="@color/silver" />

    <!-- TODO: Ripple effect -->
    <TextView
        android:id="@+id/support_link"
        android:drawableStart="@drawable/support"
        android:text="@string/support_link"
        style="@style/AppTheme.NavigationItem"
        tools:text="お問い合わせ" />

    <!-- TODO: Ripple effect -->
    <TextView
        android:id="@+id/sign_out"
        android:drawableStart="@drawable/sign_out"
        android:text="@string/sign_out"
        style="@style/AppTheme.NavigationItem"
        tools:text="ログアウト" />

</LinearLayout>